--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Portfolio</h1>
         <div class="navbar">
-            <h3>projects</h3>
+            <h3 id="button">projects</h3>
             <h3>Contact</h3>
             <h3>Artwork</h3>
         </div> 
