--- a/home/index.html
+++ b/home/index.html
@@ -14,9 +14,9 @@
     <header>
         <h1>Portfolio</h1>
         <div class="navbar">
-            <h3 id="button">projects</h3>
-            <h3>Contact</h3>
-            <h3>Artwork</h3>
+            <h3 id="button"><a href="./projects.html"> Projects</a></h3>
+            <h3 id="button2">Contact</h3>
+            <h3 id="button3">Artwork</h3>
         </div> 
     </header>    
 
