fixing minor issues and adding remaining webpages

--- a/artwork/artwork.html
+++ b/artwork/artwork.html
@@ -7,7 +7,7 @@
     <title>Projects</title>
 </head>
 <body>
-    <h1> Hello World! This will be the Projects page!</h1>
+    <h1> Hello World! This will be the Atrwork page!</h1>
 
     <a href="../home/index.html"> Take me back to home!</a>
 </body>
